--- a/bootstrap/css/index.css
+++ b/bootstrap/css/index.css
@@ -146,19 +146,33 @@ body{
     background-color: #f0f0f0;
 }
 
-#products  >.container >.nav-tabs>li.active>a{
+#products  >.container >.ul-wraper{
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    #products  >.container >.ul-wraper{
+        overflow-x: scroll;
+    }
+}
+
+#products  >.container >.ul-wraper>.nav-tabs{
+
+}
+
+#products  >.container >.ul-wraper>.nav-tabs>li.active>a{
     background-color: transparent;
     border: 0;
     border-bottom: 3px solid #E92322;
 }
 
-#products  >.container >.nav-tabs>li>a{
+#products  >.container >.ul-wraper >.nav-tabs>li>a{
     border: 0;
     color: #555;
     font-size: 16px;
 }
 
-#products  >.container >.nav-tabs>li>a:hover{
+#products  >.container >.ul-wraper >.nav-tabs>li>a:hover{
     background-color: transparent;
 }
 
@@ -395,6 +409,9 @@ body{
     line-height: 80px;
     /*height: 80px;*/
     border: 0;
+    top: 0;
+    background-color: #fff;
+    z-index: 1;
     margin-bottom: 0;
 }
 .navbar-itcast .navbar-brand {
